# adventofcode2018

./: .gitignore  README.md
day02/: part2.py
day03/: part1.py  solution.py
day04/: solution.py
day05/: solution.cpp
day08/: day08.py
day09/: solution.cpp
day1/: 2.py  part1.py
day10/: solution.py
day11/: solution.py  test_solution.py
day16/: CMakeLists.txt  cpu.cpp  cpu.hpp  solution.cpp
day19/: CMakeLists.txt  README.md
day19/data/: annotated.pseudo  annotated.pseudo3  annotated.pseudo5  program-annotated.aoc  short.aoc
day19/extra/: aoc19-optimized.cpp  pseudo1  pseudo2  pseudo3  pseudo4  pseudo5
day19/optimized/: aoc19-optimized.cpp  aoc19.cpp
day19/src/: CMakeLists.txt  cpu.cpp  cpu.hpp  main.cpp  opcodes.cpp  opcodes.hpp  program.cpp  program.hpp
day19/test/: CMakeLists.txt  cpu_test.cpp  opcodes_test.cpp  program_test.cpp
day2/: 1.py
